<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_title"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/ic_keyboard_arrow_left_blue_24dp" />

        <TextView
            android:id="@+id/mini_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="mini_title_placeholder" />
    </LinearLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Title_Placeholder" />

            <RatingBar
                android:id="@+id/ratingBarDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:layout_weight="0"
                android:translationX="-50dp"
                android:scaleX="0.5"
                android:scaleY="0.5"/>

            <ImageView
                android:id="@+id/banner_img"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_black"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/img_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/edit_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/variation" />

                <TextView
                    style="@style/borded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Variation_Placeholder"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cep" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        style="@style/borded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input"
                        android:textColor="@color/fadedLetter"
                        android:textSize="15dp" />

                    <Button
                        android:textAllCaps="false"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/default_button"
                        android:text="@string/calculate"
                        android:textColor="@color/defaultWhite"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/borded"
                android:id="@+id/price_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/price_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="R$ Price_placeholder"
                            android:textColor="@color/blueItem"
                            android:textSize="15dp"
                            android:textStyle="bold"/>

                        <Space
                            android:layout_width="1dp"
                            android:layout_height="30dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calculate_cep_title"
                            android:textColor="@color/darkGray"
                            android:textSize="15dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calculate_desc"
                            android:textColor="@color/darkGray"
                            android:textSize="12dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_margin="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/seller"/>

                            <TextView
                                android:id="@+id/seller_info"
                                android:textSize="12dp"
                                android:layout_margin="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="seller_placeholder"/>

                        </LinearLayout>

                        <Button
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:padding="5dp"
                            android:layout_height="35dp"
                            android:drawableLeft="@drawable/ic_shopping_cart_white_24dp"
                            android:textColor="@color/defaultWhite"
                            android:text="@string/buy"
                            android:background="@drawable/buy_button"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/product_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/blueItem"
                    android:textStyle="bold"
                    android:text="@string/product_details" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="description_placeholder" />
            </LinearLayout>

        </LinearLayout>



    </ScrollView>



</LinearLayout>